visible items in viewport detection, old way of callbacks implementation, fixed triggers, added the forgoten return if no element is passed

--- a/css/flumen.css
+++ b/css/flumen.css
@@ -3,8 +3,6 @@
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   position: relative;
-  margin-bottom: 50px;
-  /* border: 1px solid blue; */
 }
 
 .flumen.no-flexbox {
@@ -15,17 +13,6 @@
 
 .flumen .flumen-slide {
   flex-shrink: 0;
-  width: 300px;
-  height: 300px;
-  color: white;
-  background: grey;
-  line-height: 300px;
-  font-size: 26px;
-  text-align: center;
-  font-weight: bold;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 }
 
 .flumen.no-flexbox .flumen-slide {
