--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,25 @@
 }
 */
 
+.slider {
+    margin-bottom: 50px;
+}
+
+.slider > div {
+  flex-shrink: 0;
+  width: 300px;
+  height: 300px;
+  color: white;
+  background: grey;
+  line-height: 300px;
+  font-size: 26px;
+  text-align: center;
+  font-weight: bold;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 .content {
     margin: 0 auto;
     margin-top: 200px;
